# sxtwl_cpp

./: .gitignore  .gitmodules  .travis.yml  0README.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  export.bat  export.sh  ndk_build.py  setup.py  sxwnl.sln
Debug/: sxwnl.ilk
c/: CMakeLists.txt  sxtwl_c.cpp  sxtwl_c.h
cmake/: FindPHP.cmake  android.cmake  ios.cmake  platform.cmake
doc/: ChangeLog.txt  LICENSE  Python用户手册.md  sxwnl.7z  如何构建.md
doc/sxwnl/: sxwnl.htm
doc/sxwnl/源程序/: JW.js  eph.js  eph0.js  ephB.js  exphelp1.htm  hebin.bat  help.js  index.htm  jsZip.js  lunar.js  page_gj.js  readme.htm  sm1.htm  sm2.htm  sm3.htm  sm4.htm  sm5.htm  sm6.htm  sm7.htm  sm8.htm  sm9.htm  tools.js  vml.js  界线图.htm  精度表.txt
doc/sxwnl/附件/: fj1.htm  fj2.htm  fj3.htm  fj4.htm  fj5.htm  fj6.htm  fj6_2.htm  index.htm  nun.htm  ss_jq.htm  xk0.txt  xx1.htm  xx2.htm  xx3.htm
example/: CMakeLists.txt  main.cpp  main.py
example/golang/: go.mod  main.go
example/golang/sxtwl/: init.go  sxtwl.go
export/C#/: Day.cs  GZ.cs  JDList.cs  JQList.cs  JieQiInfo.cs  SWIGTYPE_p_G.cs  Time.cs  sxtwl.cs  sxtwlPINVOKE.cs  sxtwl_wrap.cxx
export/golang/: sxtwl.go  sxtwl_wrap.c  sxtwl_wrap.cxx
export/java/: Day.java  GZ.java  JDList.java  JQList.java  JieQiInfo.java  SWIGTYPE_p_G.java  Time.java  sxtwl.java  sxtwlConstants.java  sxtwlJNI.java  sxtwl_wrap.cxx
export/lua/: sxtwl_wrap.cxx
export/php5/: php_sxtwl.h  sxtwl.php  sxtwl_wrap.cxx
export/php7/: php_sxtwl.h  sxtwl.php  sxtwl_wrap.cxx
export/python/: README.md
python/: .gitignore  MANIFEST.in  README.md  setup.py  sxtwl.py  sxtwl_wrap.cxx
python/src/: CMakeLists.txt  JD.cpp  SSQ.h  XL.cpp  XL.h  const.h  day.h  eph.cpp
python/sxtwl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  JD.cpp  JD.h  SSQ.cpp  const.h  day.cpp  day.h  eph.cpp  eph.h  lunar.cpp  lunar.h  main.cpp  sxtwl.cpp  sxtwl.h
swig/: build.sh  sxtwl.i  sxtwl_wrap.cxx
swig/example/python/: test.py
sxwnl/: JD.cpp  JD.h  SSQ.cpp  SSQ.h  XL.cpp  XL.h  const.h  eph.cpp  eph.h  lunar.cpp  lunar.h  main.cpp  sxwnl.vcxproj  sxwnl.vcxproj.filters  tools.cpp
sxwnl/Debug/: vc140.idb
sxwnl/Debug/sxwnl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sxwnl.lastbuildstate
